# nodeeditor

./: CMakeLists.txt  README.md
include/nodes/internal/: Node.hpp  NodeDataModel.hpp  NodeGeometry.hpp  NodeState.hpp
src/: Node.cpp  NodeState.cpp
test/: CMakeLists.txt
